     half of the page

   o Track duplication now also possible with COPY+PASTE in UTILITY page

   o added BLM fader configuration to UTILITY->Opt menu (item #13/15)
     Up to 8 faders can be connected to the BLM16x16+X
     They can send a CC value either to a statically assigned Port/Chn, or to
     the Port/Chn defined by the track.
     Optionally value can be sent with inverted polarity (turn encoder beyond CC#127).
     Additional (internal) functions can be added in future.


MIDIboxSEQ V4.089
~~~~~~~~~~~~~~~~~

   o added DIN testmode which can be enabled from the MIOS terminal with the
     "set din_testmode on" command to display button and encoder movements.

   o added "Roll Gate" as new optional trigger layer assignment.
     It gates the Roll or Roll2 value which is configured in a parameter layer.

   o Euclid Generator: parameter layer into which the pattern will be copied
     now selectable.
     Velocity/Accent will only be changed if the first parameter layer is selected.

   o it's now possible to quickly duplicate the steps of a track:
     press&hold COPY and press the PASTE button

   o Groove page: by default, groove configuration changes are applied on all tracks now.
     It's possible to select a "local groove" by pressing GP7 button in the groove page.

   o BPM page: it's now possible to configure an output delay for each MIDI port.
     (positive and negative delays are supported - this is currently an experimental feature!)

   o fixed NoteOff in Jam Forwarding mode if FTS, Limit or Humanizer is enabled

   o NOTE: due to a RAM capacity issue, the UNDO function is currently not available
     for the LPC17 firmware


MIDIboxSEQ V4.088
~~~~~~~~~~~~~~~~~

   o improved glide function for polyphonic steps

   o BLM16x16+X support for Mute and Solo
     The new functions are available at Extra Row Button #3 and #4
     (if a BLM16x8+X is connected, they replace Start/Stop at Extra Row Button #1 and #2)
